src/test/ui/associated-types/associated-types-subtyping-1.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/associated-types-subtyping-1.rs:36:13
   |
LL | fn method2<'a,'b,T>(x: &'a T, y: &'b T)
   |            -- -- lifetime `'b` defined here
   |            |
   |            lifetime `'a` defined here
...
LL |     let _c: <T as Trait<'b>>::Type = a; //~ ERROR E0623
   |             ^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: unsatisfied lifetime constraints
  --> $DIR/associated-types-subtyping-1.rs:44:12
   |
LL | fn method3<'a,'b,T>(x: &'a T, y: &'b T)
   |            -- -- lifetime `'b` defined here
   |            |
   |            lifetime `'a` defined here
...
LL |     let b: <T as Trait<'b>>::Type = make_any();
   |            ^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: aborting due to 2 previous errors

